--- a/src/docs/swagger/admin.yaml
+++ b/src/docs/swagger/admin.yaml
@@ -93,7 +93,7 @@ paths:
         Returns all prepared statements.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-prepared[Get Prepared Statements] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-prepared-get[Get Prepared Statements] for examples.
         ====
       security:
         - Default: []
@@ -114,7 +114,7 @@ paths:
         Returns the specified prepared statement.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-prepared[Get Prepared Statements] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-prepared-get[Get Prepared Statements] for examples.
         ====
       security:
         - Default: []
@@ -131,7 +131,7 @@ paths:
         Deletes the specified prepared statement.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-prepared[Delete Prepared Statement] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-prepared-delete[Delete Prepared Statements] for examples.
         ====
       security:
         - Default: []
@@ -151,7 +151,7 @@ paths:
         Returns all active query requests.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-active-req[Get Active Requests] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-active-get[Get Active Requests] for examples.
         ====
       security:
         - Default: []
@@ -172,7 +172,7 @@ paths:
         Returns the specified active query request.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-active-req[Get Active Requests] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-active-get[Get Active Requests] for examples.
         ====
       security:
         - Default: []
@@ -189,7 +189,7 @@ paths:
         Terminates the specified active query request.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-active-req[Terminate an Active Request] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-active-delete[Terminate an Active Request] for examples.
         ====
       security:
         - Default: []
@@ -209,7 +209,7 @@ paths:
         Returns all completed requests.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Get Completed Requests] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-get[Get Completed Requests] for examples.
         ====
       security:
         - Default: []
@@ -230,7 +230,7 @@ paths:
         Returns the specified completed request.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Get Completed Requests] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-get[Get Completed Requests] for examples.
         ====
       security:
         - Default: []
@@ -247,7 +247,7 @@ paths:
         Purges the specified completed request.
         [NOTE]
         ====
-        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Purging the Completed Requests] for examples.
+        Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-delete[Purge the Completed Requests] for examples.
         ====
       security:
         - Default: []
@@ -943,7 +943,7 @@ definitions:
           A nested object that sets the parameters for the completed requests catalog.
           All completed requests that match these parameters are tracked in the completed requests catalog.
 
-          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
+          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-config[Configure the Completed Requests] for more information and examples.
         properties:
           aborted:
             type: boolean
@@ -976,7 +976,10 @@ definitions:
             type: string
             default: ""
             example: "both_user_and_error"
-            description: A unique string which tags a set of qualifiers.
+            description: |
+              A unique string which tags a set of qualifiers.
+
+              Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-config[Configure the Completed Requests] for more information.
           threshold:
             type: integer
             format: int32
@@ -1006,7 +1009,7 @@ definitions:
 
           Increase this when the completed request keyspace is not big enough to track the slow requests, such as when you want a larger sample of slow requests.
 
-          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
+          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-config[Configure the Completed Requests] for more information and examples.
       completed-threshold:
         type: integer
         format: int32
@@ -1021,7 +1024,7 @@ definitions:
 
           Specify any negative number to track none.
 
-          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
+          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-config[Configure the Completed Requests] for more information and examples.
       controls:
         type: boolean
         default: false
@@ -1217,7 +1220,7 @@ definitions:
           [NOTE]
           If `profile` is not set as one of the above values, then the profile setting does not change.
           
-          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#sys-completed-req[Configuring the Completed Requests] for more information and examples.
+          Refer to xref:manage:monitor/monitoring-n1ql-query.adoc#monitor-profile-details[Monitoring and Profiling Details] for more information and examples.
       request-size-cap:
         type: integer
         format: int32
