Generate output as AsciiDoc partials

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ ext {
 
 convertSwagger2markup {
     swaggerInput file("src/docs/swagger/admin.yaml").getAbsolutePath()
-    outputFile file("../docs-server/modules/n1ql/pages/n1ql-rest-api/admin")
+    outputDir file("../docs-server/modules/n1ql/partials/n1ql-rest-api/admin")
     config = ['swagger2markup.markupLanguage' : 'ASCIIDOC',
               'swagger2markup.generatedExamplesEnabled' : false,
               'swagger2markup.operationOrderBy' : 'AS_IS',
